<resources>
    <string name="app_name">WashSauce-Dev</string>
    <string name="welcomeMessageCustomerHomepage">Welcome buddy!</string>
    <string name="currentTicketMessage">Current Ticket view : No ticket yet</string>
    <string name="statusOnTicket">None yet</string>
    <string name="loadOnTicket">None yet</string>
    <string name="typeOnTicket">None yet</string>
    <string name="conditionOnTicket">None yet</string>
    <string name="WasherOnTicket">None yet</string>
    <string name="clearSignUp">clearSignUp</string>
    <string name="clear">clear</string>

</resources>

