<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccccff"
    tools:context=".UserHomeActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="79dp"
        android:background="@drawable/custom_buttons"
        android:onClick="goToRequest"
        android:text="Request a wash"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WasherOnTicket" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="79dp"
        android:background="@drawable/custom_buttons"
        android:text="History"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <TextView
        android:id="@+id/currentTicketMessage"
        android:layout_width="282dp"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="17dp"
        android:text = "@string/currentTicketMessage"
        app:layout_constraintBottom_toTopOf="@+id/statusOnTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusOnTicket"
        android:layout_width="282dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text= "@string/statusOnTicket"
        app:layout_constraintBottom_toTopOf="@+id/loadOnTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTicketMessage" />

    <TextView
        android:id="@+id/loadOnTicket"
        android:layout_width="282dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:text= "@string/loadOnTicket"
        app:layout_constraintBottom_toTopOf="@+id/typeOnTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusOnTicket" />

    <TextView
        android:id="@+id/typeOnTicket"
        android:layout_width="282dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:text= "@string/typeOnTicket"
        app:layout_constraintBottom_toTopOf="@+id/conditionOnTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadOnTicket" />

    <TextView
        android:id="@+id/conditionOnTicket"
        android:layout_width="282dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:text= "@string/conditionOnTicket"
        app:layout_constraintBottom_toTopOf="@+id/WasherOnTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOnTicket" />

    <TextView
        android:id="@+id/WasherOnTicket"
        android:layout_width="282dp"
        android:layout_height="0dp"
        android:layout_marginBottom="69dp"
        android:text= "@string/WasherOnTicket"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditionOnTicket" />

</android.support.constraint.ConstraintLayout>